--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,30 @@
 {
-    "name": "carbontwelve/azure-dns",
-    "description": "Azure DNS Management Tool",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Simon Dann",
-            "email": "simon.dann@gmail.com"
-        }
-    ],
-    "require": {
-        "php": ">=5.5.9",
-        "thenetworg/oauth2-azure": "^1.0",
-        "vlucas/phpdotenv": "^2.2",
-        "league/route": "~1",
-        "league/container": "~1.0",
-        "league/event": "~2.1",
-        "symfony/http-kernel" : "^3"
-    },
-    "autoload": {
-        "psr-4": {
-            "Carbontwelve\\AzureDns\\": "src/"
-        }
+  "name": "carbontwelve/azure-dns",
+  "description": "Azure DNS Management Tool",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Simon Dann",
+      "email": "simon.dann@gmail.com"
     }
+  ],
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/protonphp/proton"
+    }
+  ],
+  "require": {
+    "php": ">=5.5.9",
+    "thenetworg/oauth2-azure": "^1.0",
+    "vlucas/phpdotenv": "^2.2",
+    "protonphp/proton": "^1.4",
+    "zendframework/zend-diactoros": "^1.3"
+  },
+  "autoload": {
+    "psr-4": {
+      "Carbontwelve\\AzureDns\\": "src/"
+    }
+  },
+  "minimum-stability": "dev"
 }
