--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,16 @@
     "thenetworg/oauth2-azure": "^1.0",
     "vlucas/phpdotenv": "^2.2",
     "protonphp/proton": "^1.4",
-    "zendframework/zend-diactoros": "^1.3"
+    "zendframework/zend-diactoros": "^1.3",
+    "aura/session": "^2.0"
   },
   "autoload": {
     "psr-4": {
       "Carbontwelve\\AzureDns\\": "src/"
-    }
+    },
+    "files": [
+      "src/Helpers.php"
+    ]
   },
   "minimum-stability": "dev"
 }
