--- a/composer.json
+++ b/composer.json
@@ -17,21 +17,18 @@
   "require": {
     "php": ">=5.5.9",
     "thenetworg/oauth2-azure": "^1.0",
-    "laravel/lumen-framework": "5.2.*",
-    "vlucas/phpdotenv": "~2.2",
-    "irazasyed/larasupport": "~1.0"
-  },
-  "require-dev": {
-    "fzaninotto/faker": "~1.4",
-    "phpunit/phpunit": "~4.0"
+    "slim/slim": "^3.1",
+    "slim/php-view": "^2.0",
+    "monolog/monolog": "^1.17",
+    "aura/session": "^2.0"
   },
   "autoload": {
     "psr-4": {
 
-      "App\\": "app/"
+      "AzureDns\\": "src/"
     },
     "files": [
-      "app/Helpers.php"
+      "src/Helpers.php"
     ]
   },
   "minimum-stability": "dev"
