--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,11 @@
     "slim/slim": "^3.1",
     "slim/php-view": "^2.0",
     "monolog/monolog": "^1.17",
-    "aura/session": "^2.0"
+    "aura/session": "^2.0",
+    "zeuxisoo/slim-whoops": "0.5.*"
   },
   "autoload": {
     "psr-4": {
-
       "AzureDns\\": "src/"
     },
     "files": [
