--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
     "monolog/monolog": "^1.17",
     "aura/session": "^2.0"
   },
+  "require-dev": {
+    "symfony/var-dumper": "^3"
+  },
   "autoload": {
     "psr-4": {
 
